--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "sourceMap": false,
-    "removeComments": false,
+    "removeComments": true,
     "inlineSourceMap": false,
     "inlineSources": false
   },
